src/core/tests/data/invalid/same_names/config.rsk

[settings]
artifact_paths = ["{repo}/deep/spcs"]
repo_names = [".fake_repo"]
